スワイプカードの反論、いいね機能及び取得するカードの除外も設定完了。
あとは討論に紐づけて反論メッセージの登録と討論詳細画面作成と遷移。

--- a/app/src/main/java/kimsy/rr/vental/data/FireStoreDesign.yaml
+++ b/app/src/main/java/kimsy/rr/vental/data/FireStoreDesign.yaml
@@ -18,9 +18,13 @@ users:
     liked_SwipeCards:
       # collection
       - swipeCard_id: "card789"
+      - liked_date: "2024-01-10T10:00:00Z"
     skipped_SwipeCards:
       # collection
       - swipeCard_id: "card678"
+    debating_swipeCards:
+      # collection
+      -swipeCard_id: "card789"
     liked_discussions:
       # collection
       - discussion_id: "discussion456"
