--- a/app/src/main/java/kimsy/rr/vental/data/FireStoreDesign.yaml
+++ b/app/src/main/java/kimsy/rr/vental/data/FireStoreDesign.yaml
@@ -129,4 +129,14 @@ reports:  # 通報の親コレクション
         reason: 1
         reportedDateTime: 2024-01-10T10:00:00Z
 
+deleteRequests: #削除依頼の親コレ
+  debates: #討論の削除依頼
+    debateId: #討論ごとの削除依頼コレ
+      - requesterId: "user789"
+        contentId:
+        userType: "poster"
+        reason: 3
+        requestedDateTime: 2024-01-10T10:00:00Z
+
+
 notificationsLog: #将来入れるかも
