--- a/app/src/main/java/kimsy/rr/vental/data/FireStoreDesign.yaml
+++ b/app/src/main/java/kimsy/rr/vental/data/FireStoreDesign.yaml
@@ -15,6 +15,7 @@ users:
     user_created_datetime: "2024-01-10T10:00:00Z"
     age_group: "20-29"
     gender: "male"
+    account_closing_flag: false
     liked_SwipeCards:
       # collection
       - swipeCard_id: "card789"
@@ -98,9 +99,16 @@ users:
                 comment_content: "そうですね！"
                 commented_datetime: "2024-11-02T16:05:00Z"
 
+#withdrawals:
+#  # collection
+#  - withdrawalDate_userId: "2024-10-01_user123"
+#    reason: "個人的な理由"
+#    reLoginDate: "2024-10-20"
+
 withdrawals:
   # collection
-  - withdrawalDate_userId: "2024-10-01_user123"
+  - userId: "user123"
+    withdrawalDate: "2024-10-01"
     reason: "個人的な理由"
     reLoginDate: "2024-10-20"
 
